tests/paczka1/small_fuzzy/17845007.err
Error in line 2: fI6ET7NIa A137 75,2
Error in line 12: 7zVdKg1ECoN A137 285,4
